--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "essagallery-serverless",
   "version": "1.0.0",
-  "description": "Serverless app for Essa Gallery Project",
+  "description": "A Backend Serverless App for Essa Gallery Project",
   "main": "index.js",
   "repository": "https://github.com/Essa-Media/EssaGallery-Serverless.git",
   "author": "mraihanaf <mraihanaf0@gmail.com>",
